refactor BlogService to improve code readability and handle null values in blog updates